--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
 <app-top-nav-bar>Loading</app-top-nav-bar>
+
+<app-side-nav-bar>Loading2</app-side-nav-bar>
+
+<app-feed>Loading3</app-feed>
+
+<app-bottom-nav-bar>Loading4</app-bottom-nav-bar>
