--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -10,7 +10,7 @@
   </head>
   
 <body>
-    <div class="container align-items-xl-baseline">
+    <div class="container">
         <div class="d-flex justify-content-center ">
             <div class="col-md-8">
                 <div class="feed">
@@ -18,21 +18,11 @@
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe width="480" height="270" src="https://www.youtube.com/embed/sN5XetbrzLc" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <div class="d-flex justify-content-end socials p-2">
-                            <i class="fa fa-thumbs-up"></i>
-                            <i class="fa fa-comments-o"></i>
-                            <i class="fa fa-share"></i>
-                        </div>
-                        <div>
-                            <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
-                                <div class="d-flex flex-row align-items-center feed-text px-2">
-                                    <img class="rounded-circle" src="https://cdn2.iconfinder.com/data/icons/business-hr-and-recruitment/100/account_blank_face_dummy_human_mannequin_profile_user_-512.png" width="45">
-                                    <div class="d-flex flex-column flex-wrap ml-2">
-                                        <span class="font-weight-bold text-white">Greg Potts</span>
-                                    </div>
-                                </div>
-                                <div class="feed-icon px-2">
-                                    <i class="fa fa-ellipsis-v text-black-50"></i>
+                        <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
+                            <div class="d-flex flex-row align-items-center feed-text px-2">
+                                <img class="rounded-circle" src="https://cdn2.iconfinder.com/data/icons/business-hr-and-recruitment/100/account_blank_face_dummy_human_mannequin_profile_user_-512.png" width="45">
+                                <div class="d-flex flex-column flex-wrap ml-2">
+                                    <span class="font-weight-bold text-white">Greg Potts</span>
                                 </div>
                             </div>
                         </div>
