--- a/src/app/header/top-nav-bar.component.html
+++ b/src/app/header/top-nav-bar.component.html
@@ -10,37 +10,8 @@
 </head>
 
 <body>
-  <nav class="navbar bg-dark">
-    <li class="logo">
-      <img width=40 height=40 src="https://cdn.medal.tv/assets/img/new-medal-logo.png" class="img-fluid" alt="medaltv">
-    </li>  
-    <form class="d-flex">   
-      <input class="form-control me-2" type="search" placeholder="Search Medal for anything..." aria-label="Search">
-    </form>
-    <ul class="nav">
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        Blog
-      </a></li>
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        Games
-      </a></li>
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        Careers
-      </a></li>
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        Upload
-      </a></li>
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        Downloads
-      </a></li>
-    </ul>
-    <ul class="nav">
-      <li class="nav-item"><a class="nav-link text-white" href ="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-        </svg>  
-        Log In
-      </a></li>
-    </ul>
+  <nav class="navbar navbar-dark bg-dark">
+      <app-search>Loading search</app-search>
+      <top-nav-buttons>Loading buttons</top-nav-buttons>
   </nav>
 </body>
