--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -18,10 +18,10 @@
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe width="480" height="270" src="https://www.youtube.com/embed/sN5XetbrzLc" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <div class="d-flex flex-row justify-content-between align-items-center p-2 border-bottom">
+                        <div class="d-flex flex-row just align-items-center">
                             <div class="d-flex flex-row align-items-center feed-text px-2">
                                 <img class="rounded-circle" src="https://cdn2.iconfinder.com/data/icons/business-hr-and-recruitment/100/account_blank_face_dummy_human_mannequin_profile_user_-512.png" width="45">
-                                <div class="d-flex flex-column flex-wrap ml-2">
+                                <div class="d-flex flex-column flex-wrap">
                                     <span class="font-weight-bold text-white">Greg Potts</span>
                                 </div>
                             </div>
