--- a/src/app/header/top-nav-bar.component.html
+++ b/src/app/header/top-nav-bar.component.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <app-search>Loading search</app-search>
       <top-nav-buttons>Loading buttons</top-nav-buttons>
   </nav>
