--- a/src/app/sidebar/side-nav-bar.component.html
+++ b/src/app/sidebar/side-nav-bar.component.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="d-flex flex-column bg-dark px-2">
+
     <li class="nav-item px-0 py-0">
       <a href="" class="nav-link px-0 py-0">
         <li class="logo py-0">
@@ -18,6 +19,7 @@
         </li> 
       </a>
     </li>
+
     <li class="nav-item px-0 py-0">
       <a href="" class="nav-link px-0 py-0">
         <li class="refresh">
@@ -28,10 +30,11 @@
         </li> 
       </a>
     </li>
+
     <li class="nav-item px-0 py-0">
       <a href="" class="nav-link px-0 py-0">
         <li class="rounded-circle">
-          <img width=40 height=40 src="https://ih1.redbubble.net/image.763290317.1508/st,small,845x845-pad,1000x1000,f8f8f8.u4.jpg" class="rounded-circle" alt="Apex">
+          <img width=40 height=40 src="{{apex}}" class="rounded-circle" alt="Apex">
         </li> 
       </a>
     </li>
@@ -39,7 +42,7 @@
     <li class="nav-item px-0 py-0">
       <a href="" class="nav-link px-0 py-0">
         <li class="rounded-circle">
-          <img width=40 height=40 src="https://ih1.redbubble.net/image.286894384.7375/flat,750x,075,f-pad,750x1000,f8f8f8.jpg" class="rounded-circle" alt="CounterStrike">
+          <img width=40 height=40 src="{{counterstrike}}" class="rounded-circle" alt="CounterStrike">
         </li>
       </a>
     </li>
@@ -47,7 +50,7 @@
     <li class="nav-item px-0 py-0">
       <a href="" class="nav-link px-0 py-0">
         <li class="rounded-circle">
-          <img width=40 height=40 src="https://m.media-amazon.com/images/I/51P8Uyw+6UL._AC_SX450_.jpg" class="rounded-circle" alt="Smash Ultimate">
+          <img width=40 height=40 src="{{smashbros}}" class="rounded-circle" alt="Smash Ultimate">
         </li>
       </a>
     </li>
