started on routing

--- a/src/app/header/top-nav-buttons.component.html
+++ b/src/app/header/top-nav-buttons.component.html
@@ -3,7 +3,7 @@
     <li class="nav-item"><a class="nav-link blog" href ="#">
       Blog
     </a></li>
-    <li class="nav-item"><a class="nav-link games" href ="#">
+    <li class="nav-item"><a class="nav-link games" routerLink="games">
       Games
     </a></li>
     <li class="nav-item"><a class="nav-link sdk" href ="#">
@@ -19,7 +19,7 @@
       </svg>
       Upload
     </a></li>
-    <li class="nav-item down-pills"><a class="nav-link text-black active" href ="#">
+    <li class="nav-item down-pills"><a class="nav-link text-black active" routerLink="download">
       Download
     </a></li>
     <li class="nav-item"><a class="nav-link login" href ="#">
