--- a/src/app/layout/layout-main.component.html
+++ b/src/app/layout/layout-main.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="flex-column">
             <app-top-nav-bar>Loading top nav bar</app-top-nav-bar>
-            <app-feed>Loading feed</app-feed>
+            <router-outlet></router-outlet>
             <app-bottom-nav-bar>Loading bottom nav bar</app-bottom-nav-bar>
         </div>
     </div>
