--- a/src/app/body/home/trending.component.html
+++ b/src/app/body/home/trending.component.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   
-<body>
+<body routerLink="/trending">
     <div class="container">
         <div class="d-flex justify-content-center ">
             <div class="col-md-8">
