--- a/src/app/sidebar/side-nav-bar.component.html
+++ b/src/app/sidebar/side-nav-bar.component.html
@@ -21,7 +21,7 @@
     </li>
 
     <li class="nav-item px-0 py-0">
-      <a href="" class="nav-link px-0 py-0">
+      <a routerLink="/trending" class="nav-link px-0 py-0">
         <li class="refresh">
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-house" viewBox="0 0 16 16" href="#">
             <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
@@ -32,7 +32,7 @@
     </li>
 
     <li class="nav-item px-0 py-0">
-      <a href="" class="nav-link px-0 py-0">
+      <a routerLink="/game-one" class="nav-link px-0 py-0">
         <li class="rounded-circle">
           <img width=40 height=40 src="{{apex}}" class="rounded-circle" alt="Apex">
         </li> 
