--- a/src/app/sidebar/side-nav-bar.component.html
+++ b/src/app/sidebar/side-nav-bar.component.html
@@ -13,7 +13,7 @@
   <div class="d-flex flex-column bg-dark px-2">
 
     <li class="nav-item px-0 py-0">
-      <a href="" class="nav-link px-0 py-0">
+      <a routerLink="/trending" class="nav-link px-0 py-0">
         <li class="logo py-0">
           <img width=45 height=45 src="https://cdn.medal.tv/assets/img/new-medal-logo.png" class="img-fluid" alt="medaltv">
         </li> 
