--- a/src/app/body/home/discovery.component.html
+++ b/src/app/body/home/discovery.component.html
@@ -1,3 +1,49 @@
-<div routerLink="/discovery" style="background-color: red;">
-    Games Page
+<div routerLink="/discovery" style="background-color:orange;">
+    Below is Discovery Page
 </div>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'DM Sans', sans-serif;
+      }
+    </style>
+  </head>
+  
+<body routerLink="/trending">
+    <div class="container-fluid">
+        <ul class="nav">
+            <li class="nav-item"><a class="nav-link blog" routerLink="/trending">
+              Trending
+            </a></li>
+            <li class="nav-item"><a class="nav-link blog" routerLink="/discovery">
+                Discovery
+            </a></li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <div class="d-flex justify-content-center ">
+            <div class="col-md-8">
+                <div class="feed">
+                    <div class="bg-dark border">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe width="480" height="270" src="https://www.youtube.com/embed/sN5XetbrzLc" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                        <div class="d-flex flex-row just align-items-center">
+                            <div class="d-flex flex-row align-items-center feed-text px-2">
+                                <img class="rounded-circle" src="https://cdn2.iconfinder.com/data/icons/business-hr-and-recruitment/100/account_blank_face_dummy_human_mannequin_profile_user_-512.png" width="45">
+                                <div class="d-flex flex-column flex-wrap">
+                                    <span class="font-weight-bold text-white">Greg Potts</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
