--- a/src/app/body/home/discovery.component.html
+++ b/src/app/body/home/discovery.component.html
@@ -1,6 +1,3 @@
-<div routerLink="/discovery" style="background-color:orange;">
-    Below is Discovery Page
-</div>
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,20 +11,20 @@
   </head>
   
 <body routerLink="/trending">
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
         <ul class="nav">
-            <li class="nav-item"><a class="nav-link blog" routerLink="/trending">
+            <li class="nav-item"><a class="nav-link glow" routerLink="/trending">
               Trending
             </a></li>
-            <li class="nav-item"><a class="nav-link blog" routerLink="/discovery">
+            <li class="nav-item"><a class="nav-link plain" routerLink="/discovery">
                 Discovery
             </a></li>
         </ul>
     </div>
 
     <div class="container">
-        <div class="d-flex justify-content-center ">
-            <div class="col-md-8">
+        <div class="d-flex justify-content-center">
+            <div class="flex-column">
                 <div class="feed">
                     <div class="bg-dark border">
                         <div class="embed-responsive embed-responsive-16by9">
