--- a/src/app/body/games/games-page.component.html
+++ b/src/app/body/games/games-page.component.html
@@ -1,3 +1,92 @@
-<div style="background-color: red;">
-    Games Page
-</div>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'DM Sans', sans-serif;
+      }
+    </style>
+  </head>
+  
+<body routerLink="/games">
+    <div class="d-flex flex-row">
+        <h5 class="games-heading">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+          </svg>
+          80,000+ Gamers Clipping Now
+        </h5>
+    </div>
+    
+    <div class="d-flex flex-row mb-3">
+      <div class="card card-apex bg-dark mx-3" style="width: 12rem;">
+          <img src="https://image.api.playstation.com/vulcan/ap/rnd/202010/1512/8ThoZrE519SBuOMpYKFunYS0.png" class="card-img-top" alt="...">
+          <div class="card-body-apex">
+              <h5 class="card-title py-0">Apex Legends</h5>
+              <p class="card-text py-0">300K Followers</p>
+              <a routerLink="/game-one" class="btn btn-primary py-0">Follow</a>
+          </div>
+      </div>
+      <div class="card card-2 bg-dark mx-3" style="width: 12rem;">
+          <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+              <h5 class="card-title py-0">Game 2</h5>
+              <p class="card-text py-0">? Followers</p>
+              <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+          </div>
+      </div>
+      <div class="card card-3 bg-dark mx-3" style="width: 12rem;">
+        <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title py-0">Game 3</h5>
+            <p class="card-text py-0">? Followers</p>
+            <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+        </div>
+    </div>
+    <div class="card card-4 bg-dark mx-3" style="width: 12rem;">
+          <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+              <h5 class="card-title py-0">Game 4</h5>
+              <p class="card-text py-0">? Followers</p>
+              <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+          </div>
+      </div> 
+    </div>  
+
+    <div class="d-flex flex-row my-3">
+      <div class="card card-5 bg-dark mx-3" style="width: 12rem;">
+        <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title py-0">Game 5</h5>
+            <p class="card-text py-0">? Followers</p>
+            <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+        </div>
+    </div>
+      <div class="card card-6 bg-dark mx-3" style="width: 12rem;">
+          <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+              <h5 class="card-title py-0">Game 6</h5>
+              <p class="card-text py-0">? Followers</p>
+              <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+          </div>
+      </div>
+      <div class="card card-7 bg-dark mx-3" style="width: 12rem;">
+        <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title py-0">Game 7</h5>
+            <p class="card-text py-0">? Followers</p>
+            <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+        </div>
+    </div>
+    <div class="card card-8 bg-dark mx-3" style="width: 12rem;">
+          <img src="https://i.pcmag.com/imagery/articles/00DDUM2F1UuVX1ciAvfJqM3-9..1623763322.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+              <h5 class="card-title py-0">Game 8</h5>
+              <p class="card-text py-0">? Followers</p>
+              <a routerLink="" class="btn btn-primary py-0">Follow</a>    
+          </div>
+      </div> 
+    </div>  
+</body>
