--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+
+<game-info> Loading game info </game-info>
+
 <user-info> Loading user info </user-info>
+
 <layout-main>Loading layout</layout-main>
 
