--- a/src/app/header/user-info.component.html
+++ b/src/app/header/user-info.component.html
@@ -1,4 +1,4 @@
-<p *ngIf="myInfo == undefined">Failed fetching user info</p>
+<p *ngIf="myInfo == undefined">Failed fetching user info ***in myinfo</p>
 <div *ngIf="myInfo != undefined">
     <div class="container-fluid">
         <div class="d-flex flex-row justify-content-between">
